--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,11 +13,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'adopt'
+#      - name: Set up JDK 17
+#        uses: actions/setup-java@v4
+#        with:
+#          java-version: '17'
+#          distribution: 'adopt'
 
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
@@ -45,7 +45,7 @@ jobs:
           port: 2222
           script_stop: true
           script: |
-            sudo yum update -y && sudo yum install -y java-21-amazon-corretto
+#            sudo yum update -y && sudo yum install -y java-21-amazon-corretto
             for pid in $(pgrep java); do
               if ps -p $pid -o args= | grep -q 'java -jar'; then
                 echo "Java process with 'java -jar' found (PID: $pid). Terminating..."
